added list that displays users favortite things

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="css/css/bootstrap.css">
+    <link rel ="stylesheet" type="text/css" href="css/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title>Favorite Things</title>
   </head>
   <body>
-    <form class= "userInfo">
+    <form id= "userInfo">
       <div class="form-group">
         <label for="name">Please enter your name:</label>
         <input id="name" class="form-control" type="text">
@@ -29,11 +34,11 @@
       </div>
       <button type="submit" class="btn">Submit</button>
     </form>
-    <ul class="results">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+    <ul id="results">
+      <li class="fav1"></li>
+      <li class="fav2"></li>
+      <li class="fav3"></li>
+      <li class="fav4"></li>
     </ul>
   </body>
 </html>
